check_result2.txt
    Checking axur-frontend v0.1.0 (C:\Users\maiso\.gemini\antigravity\playground\azimuthal-opportunity\axur-web\crates\frontend)
error[E0525]: expected a closure that implements the `Fn` trait, but this closure only implements `FnOnce`
   --> crates\frontend\src\pages\login.rs:134:5
    |
134 | /     view! {
135 | |         <div class="min-h-screen flex items-center justify-center p-4">
136 | |             <div class="w-full max-w-md">
...   |
199 | |                                 on_click=submit_2fa
    | |                                          ---------- closure is `FnOnce` because it moves the variable `submit_2fa` out of its environment
...   |
220 | |         </div>
221 | |     }
    | |     ^
    | |     |
    | |_____this closure implements `FnOnce`, not `Fn`
    |       the requirement to implement `Fn` derives from here
    |
    = note: required for `Rc<dyn std::ops::Fn() -> Fragment>` to implement `ToChildren<{closure@crates\frontend\src\pages\login.rs:134:5: 221:6}>`
    = note: this error originates in the macro `view` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: variable does not need to be mutable
   --> crates\frontend\src\pages\dashboard.rs:256:9
    |
256 |     let mut options = web_sys::BlobPropertyBag::new();
    |         ----^^^^^^^
    |         |
    |         help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0525`.
warning: `axur-frontend` (lib) generated 1 warning
error: could not compile `axur-frontend` (lib) due to 1 previous error; 1 warning emitted
